[tool.poetry]
name = "openai"
version = "0.27.9"
description = "Python client library for the OpenAI API"
authors = ["OpenAI <support@openai.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/openai/openai-python"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

requests = ">=2.20"
tqdm = "^4.66.1"
typing-extensions = "^4.8.0"
aiohttp = "^3.8.6"

# optional dependencies for extras
matplotlib = {version = "^3.8.1", optional = true}
numpy = {version = "^1.26.1", optional = true}
openpyxl = {version = "^3.0.7", optional = true}
pandas = {version = "^1.2.3", optional = true}
pandas-stubs = {version = "^1.1.0.11", optional = true}
plotly = {version = "^5.18.0", optional = true}
scikit-learn = {version = "^1.0.2", optional = true}
scipy = {version = "^1.11.3", optional = true}
tenacity = {version = "^8.0.1", optional = true}
wandb = {version = "^0.15.12", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
jupyterlab = "^4.0.8"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"

[tool.poetry.extras]
datalib = ["numpy", "pandas", "pandas-stubs", "openpyxl"]
wandb = ["wandb", "numpy", "pandas", "pandas-stubs", "openpyxl"]
embeddings = ["scikit-learn", "tenacity", "matplotlib", "plotly", "numpy", "scipy", "pandas", "pandas-stubs", "openpyxl"]

[tool.poetry.scripts]
openai = "openai._openai_scripts:main"

[tool.black]
target-version = ['py36']
exclude = '.*\.ipynb'

[tool.isort]
py_version = 36
include_trailing_comma = "true"
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
